--- a/environment.yml
+++ b/environment.yml
@@ -4,11 +4,7 @@ channels:
 dependencies:
   - python=3.11
   - numpy
-  - psutil
-  - toolz
   - matplotlib
-  - dill
   - pandas
-  - partd
-  - bokeh
-  - dask
+  - plotly
+  - scikitlearn
