--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,19 @@
 name: example-environment
 channels:
   - conda-forge
+  - bioconda
+  - defaults
 dependencies:
-  - python=3.11
+  - python=3.9
+  - r-base=4.0
   - numpy
   - matplotlib
   - pandas
   - plotly
   - scikitlearn
+  - r-dpylyr
+  - r-ggplot2
+  - r-reshape2
+  - r-tidyverse
+  - r-plotly
+  - r-stringr
